--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,8 +36,17 @@
 
     --pill-accent: var(--bright-blue);
 
-    font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    font-family:
+      "Inter",
+      -apple-system,
+      BlinkMacSystemFont,
+      "Segoe UI",
+      Roboto,
+      Helvetica,
+      Arial,
+      sans-serif,
+      "Apple Color Emoji",
+      "Segoe UI Emoji",
       "Segoe UI Symbol";
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
@@ -51,8 +60,17 @@
     line-height: 100%;
     letter-spacing: -0.125rem;
     margin: 0;
-    font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    font-family:
+      "Inter Tight",
+      -apple-system,
+      BlinkMacSystemFont,
+      "Segoe UI",
+      Roboto,
+      Helvetica,
+      Arial,
+      sans-serif,
+      "Apple Color Emoji",
+      "Segoe UI Emoji",
       "Segoe UI Symbol";
   }
 
@@ -130,15 +148,15 @@
     background: color-mix(in srgb, var(--pill-accent) 15%, transparent);
   }
 
-  .pill-group .pill:nth-child(6n + 1) {
+  .pill-group .pill:nth-child(6n+1) {
     --pill-accent: var(--bright-blue);
   }
-  .pill-group .pill:nth-child(6n + 2) {
+  .pill-group .pill:nth-child(6n+2) {
     --pill-accent: var(--french-violet);
   }
-  .pill-group .pill:nth-child(6n + 3),
-  .pill-group .pill:nth-child(6n + 4),
-  .pill-group .pill:nth-child(6n + 5) {
+  .pill-group .pill:nth-child(6n+3),
+  .pill-group .pill:nth-child(6n+4),
+  .pill-group .pill:nth-child(6n+5) {
     --pill-accent: var(--hot-red);
   }
 
@@ -232,12 +250,27 @@
     <div class="right-side">
       <div class="pill-group">
         @for (item of [
-          { title: 'Explore the Docs', link: 'https://angular.dev' },
-          { title: 'Learn with Tutorials', link: 'https://angular.dev/tutorials' },
-          { title: 'CLI Docs', link: 'https://angular.dev/tools/cli' },
-          { title: 'Angular Language Service', link: 'https://angular.dev/tools/language-service' },
-          { title: 'Angular DevTools', link: 'https://angular.dev/tools/devtools' },
-        ]; track item.title) {
+            {
+              title: "Explore the Docs",
+              link: "https://angular.dev",
+            },
+            {
+              title: "Learn with Tutorials",
+              link: "https://angular.dev/tutorials",
+            },
+            {
+              title: "CLI Docs",
+              link: "https://angular.dev/tools/cli",
+            },
+            {
+              title: "Angular Language Service",
+              link: "https://angular.dev/tools/language-service",
+            },
+            {
+              title: "Angular DevTools",
+              link: "https://angular.dev/tools/devtools",
+            },
+          ]; track item.title) {
           <a
             class="pill"
             [href]="item.link"
@@ -331,6 +364,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
 
 <router-outlet />
