--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-html{
+html {
   font-size: 90%;
 }
 
 body {
   margin: 0;
-  font: 300 20px/1.4 'OpenSans', sans-serif;
+  font: 300 20px/1.4 "OpenSans", sans-serif;
   color: #f5f5f5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
