--- a/src/components/User/index.scss
+++ b/src/components/User/index.scss
@@ -1,12 +1,14 @@
 .user-page {
   display: flex;
   min-height: 100vh;
-  background-color: #1d1d1d;
-  color: #fff;
+  background-color: #1b1b6e;
+  color: #f5f5f5;
 
   .sidebar {
     width: 250px;
     background-color: #2a2a8f;
+    height: 100%;
+    margin-top: -2.5%;
     padding: 30px;
     display: flex;
     flex-direction: column;
@@ -26,7 +28,7 @@
 
     p {
       font-size: 13px;
-      color: #ccc;
+      color: #f5f5f5;
       margin-bottom: 30px;
     }
 
@@ -38,15 +40,18 @@
       button {
         background: none;
         border: none;
-        color: #fff;
+        color: #f5f5f5;
         padding: 12px;
         text-align: left;
         cursor: pointer;
         border-radius: 8px;
         transition: background 0.2s;
+        margin-bottom: 10px;
+        font-size: 16px;
 
         &:hover {
-          background-color: #1d1d5e;
+          background-color: #ffcc00;
+          color: #000;
         }
       }
     }
@@ -85,17 +90,17 @@
 
           &.answered {
             background-color: #4caf50;
-            color: #fff;
+            color: #f5f5f5;
           }
 
           &.open {
             background-color: #ffa500;
-            color: #fff;
+            color: #f5f5f5;
           }
 
           &.closed {
             background-color: #f44336;
-            color: #fff;
+            color: #f5f5f5;
           }
         }
       }
@@ -113,7 +118,7 @@
     padding: 8px;
     border-radius: 6px 0 0 6px;
     border: none;
-    background: #fff;
+    background: #f5f5f5;
     color: #000;
   }
   button {
@@ -152,7 +157,7 @@
 
 .delete-account-btn {
   background: #e63946;
-  color: white;
+  color: #f5f5f5;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 6px;
@@ -160,5 +165,71 @@
 
   &:hover {
     background: #d62828;
+  }
+}
+
+/* settings */
+.settings-block{
+  margin-bottom: 20px;
+  padding: 15px;
+}
+
+.status-input{
+  width: 50%;
+  border-radius: 6px;
+  border: none;
+  background: #f5f5f5;
+  color: #000;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.btnSettings{
+  color: #ffcc00;
+  font-size: 13px;
+  font-weight: 400;
+  text-align: center;
+  letter-spacing: 4px;
+  font-family: sans-serif;
+  text-decoration: none;
+  padding: 10px 18px;
+  border: 1px solid #ffcc00;
+  animation: fadeInAnimation 1s 1.8s backwards;
+  white-space: nowrap;
+  background-color: #1b1b6e;
+
+  &:hover {
+    background: #ffcc00;
+    color: #333;
+  }
+}
+
+.selectionOpt{
+  align-items: center;
+  margin-bottom: 10px;
+  margin-right: 10px;;
+  padding: 10px;;
+  font-size: 13px;
+  color: #333;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.selectionOpt option {
+  margin-right: 10px;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  accent-color: #ffd700; 
+  -webkit-appearance: none; 
+  background-color: #f5f5f5; 
+  border-radius: 4px; 
+  border: 2px solid #ffd700; 
+  transition: background-color 0.3s, border-color 0.3s; 
+
+  &:checked, &:hover, &:focus {
+    background-color: #ffd700; /* Background color when checked */
+    border-color: #ffd700; /* Border color when checked */
+    box-shadow: inset 0px 0px 0px 4px #1b1b6e; /* Inner shadow effect */
   }
 }
